k8s/base/service-ledger.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-api
  namespace: payments
  labels:
    app.kubernetes.io/name: ledger-api
spec:
  selector:
    app.kubernetes.io/name: ledger-api
  ports:
    - name: http
      port: 8080
      targetPort: http
